@@ -1,24 +1,0 @@
-<tal:comment replace="nothing">Arrows (only icons) for moving items up or down in a meeting</tal:comment>
-<td class="noPadding" tal:define="portal_url context/@@plone_portal_state/portal_url;">
-  <table class="no-style-table" cellspacing="0" cellpadding="0"
-         tal:define="dummy view/saveHasActions;">
-    <tr>
-      <td tal:condition="python: context.getItemNumber() &gt; 100" class="noPadding">
-        <img name="moveUp"
-             title="move_item_up"
-             i18n:domain="PloneMeeting"
-             i18n:attributes="title" style="cursor:pointer"
-             tal:attributes="src string:${view/portal_url}/++resource++imio.actionspanel/arrowUp.png;
-                             onClick string:moveItem(baseUrl='${context/absolute_url}', moveType='up', this);"/>
-      </td>
-      <td tal:condition="python: context.UID() != view.lastItemUID" class="noPadding">
-        <img name="moveDown"
-             title="move_item_down"
-             i18n:domain="PloneMeeting"
-             i18n:attributes="title" style="cursor:pointer"
-             tal:attributes="src string:${view/portal_url}/++resource++imio.actionspanel/arrowDown.png;
-                             onClick string:moveItem(baseUrl='${context/absolute_url}', moveType='down', this);"/>
-      </td>
-    </tr>
-  </table>
-</td>
